paks/booker-reservation/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: brv-$(.group)
  labels:
    provider: brv-$(.group)
spec:
  type: NodePort
  ports:
  - port: 8000
    nodePort: $(.node_port)
  selector:
    provider: brv-$(.group)
